The picture must be a kawaii PNG.

--- a/README
+++ b/README
@@ -10,7 +10,7 @@ How to add a cry?
     * Update your local tree with `git pull` or clone the repository with
       `git clone` if you don't have it already
     * Add the cry or cries in www/snd
-    * Add the 300x200 picture in www/img
+    * Add a kawaii 300x200 PNG picture in www/img
     * Run `git add` on the just added sound and images files
     * Edit loli_list.py and add/edit the loli entry
     * Run `make && firefox www/index.html` and check if everything is fine
