--- a/README
+++ b/README
@@ -10,6 +10,8 @@ How to add a cry?
     * Update your local tree with `git pull` or clone the repository with
       `git clone` if you don't have it already
     * Add the cry or cries in www/snd
+      See the website FAQ (http://lolicri.es/faq.html) for more information on
+      the format/codec restrictions and extraction.
     * Add a kawaii 300x200 PNG picture in www/img
     * Run `git add` on the just added sound and images files
     * Edit loli_list.py and add/edit the loli entry
